--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,19 +9,33 @@ on:
 jobs:
   build:
     runs-on: self-hosted
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
+      uses: actions/checkout@v4
+      
+    - name: Setup Docker environment
+      run: |
+        # 检查并修复 Docker 权限
+        if ! docker ps > /dev/null 2>&1; then
+          echo "Docker permission issue detected, attempting to fix..."
+          sudo chmod 666 /var/run/docker.sock || true
+        fi
+        
+        # 验证 Docker 可用性
+        docker --version
+        echo "Docker is ready"
+        
     - name: Build Docker image
       run: |
-        python3 buildimage.py
+        docker build -t my-app:${{ github.sha }} .
+        
+    - name: Run tests in container
+      run: |
+        docker run --rm my-app:${{ github.sha }} python -m pytest
+        
+    - name: Push to registry
+      run: |
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        docker tag my-app:${{ github.sha }} my-registry/my-app:${{ github.sha }}
+        docker push my-registry/my-app:${{ github.sha }}
