--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: self-hosted
  
     steps:
+      - name: login registry
+        run: |
+          docker login http://139.199.178.171:8089 --username "admin" --password "Harbor12345"
+
       - name: Build Docker image
         run: |
           python3 buildimage.py
