--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,3 +18,8 @@ jobs:
       - name: Build Docker image
         run: |
           python3 buildimage.py
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host
+          ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest
+          --token=${{ secrets.CICD_TOKEN }} --imageId="139.199.178.171:8089/cicd/tcss_cicd:1"
+
+          
