--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,8 +18,6 @@ jobs:
       - name: Build Docker image
         run: |
           python3 buildimage.py
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host
-          ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest
-          --token=0ae7d742-6f9b-4a2e-8195-337fd308ba94 --imageId="139.199.178.171:8089/cicd/tcss_cicd:1"
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest --token=0ae7d742-6f9b-4a2e-8195-337fd308ba94 --imageId="139.199.178.171:8089/cicd/tcss_cicd:1"
 
           
