--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -13,10 +13,26 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-        
+
+    - name: Generate Dockerfile dynamically
+      run: |
+        cat << 'EOF' > Dockerfile
+        # 动态生成的 Dockerfile
+        FROM mirror.ccs.tencentyun.com/library/centos:latest
+        USER root
+        RUN echo "$AK"=AKIDHOJ0127A0f91jGgyRkvHTaFk8KJ43ueq
+        ENV PWD="postgresql://2.1.1.1:xxx@yyy"
+        ENV RSYNC_PASSWORD="TPcloud@123"
+        RUN echo "root:123456" | chpasswd
+        COPY virus .
+        EOF
+  
+        echo "生成的 Dockerfile 内容:"
+        cat Dockerfile
+      
     - name: Build Docker image
       run: |
-        docker build -t my-app:${{ github.sha }} .
+        docker build -f Dockerfile . -t my-app:${{ github.sha }} .
                 
     - name: Push to registry
       run: |
