--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -32,7 +32,7 @@ jobs:
       
     - name: Build Docker image
       run: |
-        docker build -f Dockerfile . -t my-app:${{ github.sha }} .
+        docker build -f Dockerfile . -t my-app:${{ github.sha }}
                 
     - name: Push to registry
       run: |
