--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,11 @@
-name: Build and Push Docker Image
+name: TEST
 
 on:
   workflow_dispatch:
   pull_request:
   push:
-    branches: [main]
-    tags: ['v*']
+    branches: 
+      - test
 
 jobs:
   build:
