--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,6 @@ jobs:
     - name: Push to registry
       run: |
         docker login http://139.199.178.171:8089 --username "admin" --password "Harbor12345"
-        docker tag my-app:${{ github.sha }} 139.199.178.171:8089/cicd/cicd_github:${{ github.sha }}
-        docker push 139.199.178.171:8089/cicd/cicd_github:${{ github.sha }}
-        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest --token=0ae7d742-6f9b-4a2e-8195-337fd308ba94 --imageId="139.199.178.171:8089/cicd/cicd_github:${{ github.sha }}"
+        docker tag my-app:${{ github.sha }} 139.199.178.171:8089/cicd/github-test:${{ github.sha }}
+        docker push 139.199.178.171:8089/cicd/github-test:${{ github.sha }}
+        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest --token=0719f347-1f15-497b-9e5e-6f14b3f36e70 --imageId="139.199.178.171:8089/cicd/github-test:${{ github.sha }}"
