--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,33 +1,11 @@
 name: TEST
 
 on:
-  workflow_dispatch:
-    inputs: 
-      environment:
-        description: '部署环境'
-        required: true
-        default: 'staging'
-        type: choice
-        options:
-          - staging
-          - production
-      version:
-        description: '镜像版本'
-        required: false
-        default: 'latest'
-        type: string
-      run_tests:
-        description: '运行测试'
-        required: false
-        default: true
-        type: boolean
-        
+  workflow_dispatch:     
   pull_request:
-    branches: 
-      - test
   push:
     branches: 
-      - test
+      - main, master, test
 
 jobs:
   build:
