--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,7 @@ on:
   workflow_dispatch:     
   pull_request:
   push:
-    branches: 
-      - main, master, test
+    branches: [ test ]
 
 jobs:
   build:
