--- a/.github/workflows/CICD-ARM.yml
+++ b/.github/workflows/CICD-ARM.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: [self-hosted, VM-8-54-tencentos]
 
     steps:
     - name: Checkout code
