--- a/.github/workflows/github-intl.yml
+++ b/.github/workflows/github-intl.yml
@@ -44,7 +44,9 @@ jobs:
         docker login http://139.199.178.171:8089 --username "admin" --password "Harbor12345"
         docker tag my-app:${{ github.workflow }}${{ github.run_id }} 139.199.178.171:8089/cicd/github-test:${{ github.workflow }}${{ github.run_id }}
         docker push 139.199.178.171:8089/cicd/github-test:${{ github.workflow }}${{ github.run_id }}
+        
+        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest --token=22a432b4-7fb9-498b-98fa-470098a4a074 --imageId=139.199.178.171:8089/cicd/github-test:${{ github.workflow }}${{ github.run_id }}
                 
-    - name: CICD Scan
-      run: |
-        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest --token=22a432b4-7fb9-498b-98fa-470098a4a074 --imageId=${{ env.IMAGE_ID }}
+    # - name: CICD Scan
+    #   run: |
+    #     docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest --token=22a432b4-7fb9-498b-98fa-470098a4a074 --imageId=${{ env.IMAGE_ID }}
