--- a/.github/workflows/qqqqq.yml
+++ b/.github/workflows/qqqqq.yml
@@ -1,6 +1,7 @@
 name: Docker build and scan security issue by cicd-scanner
 
 on:
+  workflow_dispatch:   
   push:
     branches: [main]
   pull_request:
