--- a/.github/workflows/CICD-02.yml
+++ b/.github/workflows/CICD-02.yml
@@ -39,11 +39,11 @@ jobs:
         IMAGE_ID=$(sudo docker inspect --format='{{.Id}}' my-app:${{ github.workflow }}${{ github.run_id }})
         echo "IMAGE_ID=$IMAGE_ID" >> $GITHUB_ENV
 
-    - name: Push to registry
-      run: |
-        sudo docker login http://139.199.178.171:8089 --username "admin" --password "Harbor12345"
-        sudo docker tag my-app:${{ github.workflow }}${{ github.run_id }} 139.199.178.171:8089/cicd/github-test:${{ github.workflow }}${{ github.run_id }}
-        sudo docker push 139.199.178.171:8089/cicd/github-test:${{ github.workflow }}${{ github.run_id }}
+    # - name: Push to registry
+    #   run: |
+    #     sudo docker login http://139.199.178.171:8089 --username "admin" --password "Harbor12345"
+    #     sudo docker tag my-app:${{ github.workflow }}${{ github.run_id }} 139.199.178.171:8089/cicd/github-test:${{ github.workflow }}${{ github.run_id }}
+    #     sudo docker push 139.199.178.171:8089/cicd/github-test:${{ github.workflow }}${{ github.run_id }}
                 
     - name: CICD Scan
       run: |
