--- a/.github/workflows/CICD-02.yml
+++ b/.github/workflows/CICD-02.yml
@@ -32,11 +32,11 @@ jobs:
       
     - name: Build Docker image
       run: |
-        sudo docker build -f Dockerfile . -t my-app:${{ github.workflow }}${{ github.run_id }}
+        docker build -f Dockerfile . -t my-app:${{ github.workflow }}${{ github.run_id }}
         
     - name: Get ImageID
       run: |  
-        IMAGE_ID=$(sudo docker inspect --format='{{.Id}}' my-app:${{ github.workflow }}${{ github.run_id }})
+        IMAGE_ID=$(docker inspect --format='{{.Id}}' my-app:${{ github.workflow }}${{ github.run_id }})
         echo "IMAGE_ID=$IMAGE_ID" >> $GITHUB_ENV
 
     # - name: Push to registry
@@ -47,6 +47,6 @@ jobs:
                 
     - name: CICD Scan
       run: |
-        sudo docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:5.3.3.205 --token=bdd3d2cd-a065-4253-a277-3c988a3a297a --imageId=${{ env.IMAGE_ID }}
+        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:5.3.3.205 --token=bdd3d2cd-a065-4253-a277-3c988a3a297a --imageId=${{ env.IMAGE_ID }}
 
         
