--- a/.github/workflows/CICD-02.yml
+++ b/.github/workflows/CICD-02.yml
@@ -32,11 +32,11 @@ jobs:
       
     - name: Build Docker image
       run: |
-        docker build -f Dockerfile . -t my-app:${{ github.workflow }}${{ github.run_id }}
+        sudo docker build -f Dockerfile . -t my-app:${{ github.workflow }}${{ github.run_id }}
         
     - name: Get ImageID
       run: |  
-        IMAGE_ID=$(docker inspect --format='{{.Id}}' my-app:${{ github.workflow }}${{ github.run_id }})
+        IMAGE_ID=$(sudo docker inspect --format='{{.Id}}' my-app:${{ github.workflow }}${{ github.run_id }})
         echo "IMAGE_ID=$IMAGE_ID" >> $GITHUB_ENV
 
     # - name: Push to registry
@@ -49,4 +49,4 @@ jobs:
       run: |
         # docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:5.3.3.205 --token=bdd3d2cd-a065-4253-a277-3c988a3a297a --imageId=${{ env.IMAGE_ID }}
         # docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host --pull always ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:latest --token=bdd3d2cd-a065-4253-a277-3c988a3a297a --imageId=${{ env.IMAGE_ID }} --debugMode true
-        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host --pull always   ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:5.3.4.27  --token=6c366e99-dc95-443b-8cdc-804af629c45b  --imageId=${{ env.IMAGE_ID }} --debugMode true
+        sudo docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host --pull always   ccr.ccs.tencentyun.com/yunjing_agent/cicdscanner:5.3.4.27  --token=6c366e99-dc95-443b-8cdc-804af629c45b  --imageId=${{ env.IMAGE_ID }} --debugMode true
